# infosecunplugged.github.io

./: .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .template-modules.yaml  .tfsec.yaml  CNAME  README.md  build.py  config.json  episodes.json  index.html  pyproject.toml  requirements.txt
config/: config.yaml  episodes.json  episodes.yaml  platforms.json  platforms.yaml
css/: jquery-ui.css  style.css
episodes/: episode-1.html  episode-10.html  episode-11.html  episode-12.html  episode-13.html  episode-14.html  episode-15.html  episode-16.html  episode-17.html  episode-18.html  episode-19.html  episode-2.html  episode-20.html  episode-21.html  episode-22.html  episode-23.html  episode-24.html  episode-25.html  episode-26.html  episode-27.html  episode-28.html  episode-29.html  episode-3.html  episode-30.html  episode-31.html  episode-32.html  episode-33.html  episode-34.html  episode-35.html  episode-36.html  episode-37.html  episode-38.html  episode-39.html  episode-4.html  episode-40.html  episode-41.html  episode-42.html  episode-43.html  episode-44.html  episode-45.html  (+9 more)
js/: jquery-ui.js  main.js
series/: architecture.html  ciso.html  edr.html  iso27001-annex-a.html
tags/: tag-adversary-simulation.html  tag-ai.html  tag-asset-management.html  tag-automazione.html  tag-awareness.html  tag-backup.html  tag-botnet.html  tag-business-continuity.html  tag-business-impact-analysis.html  tag-cio.html  tag-ciso.html  tag-cloud-security.html  tag-cloud.html  tag-command-and-control.html  tag-compliance.html  tag-cyber-attack.html  tag-data-retention.html  tag-datacenter.html  tag-ddos.html  tag-defense-in-depth.html  tag-detection.html  tag-disaster-recovery.html  tag-dora.html  tag-edr.html  tag-endpoint-security.html  tag-endpointsecurity.html  tag-eventi.html  tag-fiber-channel.html  tag-firewall.html  tag-gdpr.html  tag-golden-image.html  tag-governance.html  tag-hypervisor.html  tag-incident-response.html  tag-infrastruttura-it.html  tag-infrastrutture-critiche.html  tag-ioc.html  tag-iscsi.html  tag-iso27001.html  tag-it-architecture.html  (+42 more)
(+82 files in other folders)
