[project]
name = "infosecunplugged-website"
requires-python = ">=3.10"
version = "1.0.0"

[tool.poetry.dependencies]
jinja2 = "3.1.6"
markdown = "3.9"
python-slugify = "8.0.4"
pyyaml = "6.0.2"

[tool.poetry.group.dev.dependencies]
tomlkit = "^0.13.3"
ruff = "^0.14.10"
black = "^25.12.0"


[tool.black]
exclude = '''
/(
  __pycache__
  | \.git
  | \.venv
  | build
  | dist
  | migrations
  | venv
)/
'''
skip-string-normalization = false
target-version = ["py310", "py311", "py312", "py313", "py314", "py315"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "build",
    "dist",
    "env",
    "migrations",
    "venv",
]
target-version = "py310"

