[project]
name = "infosecunplugged-website"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "infosecunplugged-website"
version = "0.1.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
tomlkit = "^0.13.3"
pyyaml = "^6.0.3"
jinja2 = "^3.1.6"
cyclonedx-bom = "^7.2.1"
pre-commit = "^4.5.1"


[tool.black]
exclude = '''
/(
  __pycache__
  | \.git
  | \.venv
  | build
  | dist
  | migrations
  | venv
)/
'''
skip-string-normalization = true
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "build",
    "dist",
    "env",
    "migrations",
    "venv",
]
target-version = "py310"

[tool.ruff.format]
indent-style = "space"            # Indent with spaces
line-ending = "lf"                # Default line ending on Unix
quote-style = "single"            # Use single quotes for strings.
skip-magic-trailing-comma = false # Respect magic trailing commas
